Generic Issue > iOS > Text in search field appear overlapped when user switch to grid view #7487

--- a/public/less/partials/_tables.less
+++ b/public/less/partials/_tables.less
@@ -176,3 +176,11 @@ table.grid thead tr{
 .table.grid > tbody > tr > td, .table.bg-white > tbody > tr > td{
     cursor: pointer;
 }
+
+.table.bg-white{
+    @media (max-width: 767px) {
+        input.form-control[st-search], input.form-control.ui-select-search{
+            min-width: 70px;
+        }
+    }    
+}
